--- a/web/css/bars.css
+++ b/web/css/bars.css
@@ -18,3 +18,16 @@ body {
 .x.axis path {
   display: none;
 }
+
+div.bar-tooltip {   
+  position: absolute;           
+  text-align: center;           
+  width: 450px;                  
+  height: 48px;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: lightsteelblue;   
+  border: 0px;      
+  border-radius: 8px;           
+  pointer-events: none;         
+}
