--- a/web/css/tree.css
+++ b/web/css/tree.css
@@ -18,3 +18,16 @@ path.link {
     fill: none;
     stroke: gray;
 }
+
+div.tree-tooltip {   
+  position: absolute;           
+  text-align: center;           
+  width: 600px;                  
+  height: 64px;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: lightsteelblue;   
+  border: 0px;      
+  border-radius: 8px;           
+  pointer-events: none;         
+}
